2008-06-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Supported FTP server which don't recognize SIZE raw command.
	If SIZE raw command is failed, aria2 will try to get file size
	from the response of RETR raw command. If both attempts are failed,
	then resuming and segmented downloading are disabled.
	* src/FtpConnection.cc
	* src/FtpConnection.h
	* src/FtpNegotiationCommand.cc
	* src/FtpNegotiationCommand.h

2008-06-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* Release 0.14.0+1

2008-06-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.14.0+1
	* src/configure.ac

2008-06-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the code that refers static member variable from non-static
	context.
	* src/DefaultPeerStorage.cc

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* Release 0.14.0

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added build test script
	* build_test.sh
	
2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated ja.po
	* src/ja.po

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.14.0
	* src/configure.ac

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated ja.po and fr.po. Great thanks for french translators and
	Sebastien WILLEMIJNS.
	* po/fr.po
	* po/ja.po	

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added configure option to enable/disable epoll support.
	* configure.ac

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated man page.
	* doc/aria2c.1.txt
	* doc/aria2c.1
	* doc/aria2c.1.html

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added missing default value '5' to the usage of --split option.
	* src/HelpItemFactory.cc

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Filled up pieces based on the number of missing blocks, rather than
	simplay the number of piece * block length.